# hambaJuba2ba

./: .gitignore  .gitmodules  Dockerfile  README.md  main.py  profiling_results.json  pyproject.toml  pytest.ini  setup.sh  setup_env.sh  test_streamdiffusion.py
.github/workflows/: docker-build-push.yml
app/: generator.py  main.py
app/frontend/: package-lock.json  package.json
app/routers/: diffusion.py  exploration.py  fourcorner.py  pipeline.py
frontend/src/: App.tsx  constants.ts
frontend/src/components/: AudioPlayer.tsx  ControlDial.tsx  Controls.tsx  ModeSelector.tsx  VectorField.tsx
frontend/src/hooks/: useWebSocket.ts
src/: __init__.py  config.py  interpolation.py  latent.py  pipeline.py  walk.py
src/audio/: __init__.py  analyzer.py  loader.py
src/diffusion/: base.py
src/hambajuba2ba/: __init__.py  imagegen.py  install_tensorrt.py  main.py
src/walks/: __init__.py  base.py  four_corner_walk.py  slerp_walk.py
tests/: __init__.py  test_runpod.py
