[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hambajuba2ba"
version = "0.1.0"
description = "Real-time diffusion pipeline with StreamDiffusion integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "diffusers",
    "transformers",
    "accelerate",
    "xformers",
    "peft",

    "numpy<2.0",

    # Other dependencies
    "fire",
    "omegaconf",
    "huggingface_hub",
    "pillow",
    "fastapi",
    "uvicorn",
    "websockets",

    # Development
    "ipykernel",
    "jupyter",
    "notebook",
]

[project.optional-dependencies]
cuda = [
    # Modern, pip-installable TensorRT from NVIDIA's index
    "tensorrt-cu12",
    "tensorrt-cu12-libs",
    "tensorrt-cu12-bindings",
    "polygraphy",
    "onnx-graphsurgeon",
    "onnx",
    "onnxruntime",
]

dev = ["pytest", "black", "ruff", "mypy"]
all = ["hambajuba2ba[cuda,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/hambajuba2ba"]

[project.scripts]
hambajuba2ba = "hambajuba2ba.main:main"
